--- a/accounting/templates/base.html
+++ b/accounting/templates/base.html
@@ -20,12 +20,12 @@
         <div class="container" style="height: 120px; padding: 20px 0px;">
             <div class="row" style="height: 100%; padding: 0px;">
                 <!-- Logo -->
-                <div class="col-sm-3  col-9">
+                <div class="col-md-3  col-9">
                     <img src="{% static 'img/logo.png' %}" width="90%">
                 </div>
 
                 <!-- NabBar -->
-                <div class="col-sm-9 col-3" style="padding: 10px 5px;">
+                <div class="col-md-9 col-3" style="padding: 10px 5px;">
                     <nav id="nav" class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
