--- a/accounting/templates/login-base.html
+++ b/accounting/templates/login-base.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block body %}
 <div class="row">
-    <div class="col-12 col-sm-6 container section justify-content-center align-items-center" style="padding: 0px">
+    <div class="col-12 col-md-6 container section justify-content-center align-items-center" style="padding: 0px">
         <nav class="navbar navbar-expand navbar-light" id="sign-nav">
             <div class="collapse navbar-collapse">
                 <table class="navbar-nav">
