--- a/templates/login-base.html
+++ b/templates/login-base.html
@@ -12,13 +12,13 @@
                 <table class="navbar-nav">
                     <tr>
                         <td style="border-right: 1px solid; width: 50%;" class="nav-item">
-                            <a href="{% url 'login' %}" class="nav-link">
+                            <a href="{% url 'users:login' %}" class="nav-link">
                                 <span>會員登入</span>
                                 <span>Sign in</span>
                             </a>
                         </td>
                         <td style=" width: 50%;" class="nav-item">
-                            <a href="{% url 'registration' %}" class="nav-link">
+                            <a href="{% url 'users:registration' %}" class="nav-link">
                                 <span>會員註冊</span>
                                 <span>Register</span>
                             </a>
