--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <div class="navbar-nav">
-                                <a class="nav-item nav-link" href="{% url 'detail' %}">明細</a>
-                                <a class="nav-item nav-link" href="#">總表</a>
+                                <a class="nav-item nav-link" href="{% url 'accounting:detail' %}">明細</a>
+                                <!-- <a class="nav-item nav-link" href="#">總表</a>
                                 <div class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,11 +45,11 @@
                                         <a class="dropdown-item" href="#">分類</a>
                                         <a class="dropdown-item" href="#">標籤</a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="navbar-nav ml-auto">
                                 <a class="nav-item nav-link" href="#">使用者</a>
-                                <a class="nav-item nav-link" href="{% url 'logout' %}">登出</a>
+                                <a class="nav-item nav-link" href="{% url 'users:logout' %}">登出</a>
                             </div>
                         </div>
                     </nav>
