--- a/templates/login.html
+++ b/templates/login.html
@@ -5,17 +5,21 @@
 {{ block.super }}
 {% endblock %}
 {% block form_body %}
-<form action="{% url 'login' %}" method="post" id="login-form">
+<form method="post" id="login-form">
     {% csrf_token %}
     <tr style="height:60px">
         <td width="30%" class="section-input">會員帳號</td>
-        <td width="70%" class="section-input">{{form.account}}
+        <td width="70%" class="section-input">
+            <!-- {{form.username}} -->
+            <input type="text" name="username" class="form-control" required="" id="id_username" placeholder="請輸入E-MAIL">
             <span class="errMsg" id="acc-errMsg"></span>
         </td>
     </tr>
     <tr style="height:60px">
         <td width="30%" class="section-input">會員密碼</td>
-        <td width="70%" class="section-input">{{form.password}}
+        <td width="70%" class="section-input">
+            <!-- {{form.password}} -->
+            <input type="password" name="password" class="form-control" required="" id="id_password" placeholder="請輸入密碼">
             <span class="errMsg" id="pwd-errMsg"></span>
         </td>
     </tr>
@@ -28,8 +32,13 @@
     </tr>
 </form>
 {% endblock %}
-
 {% block js_script %}
+<!-- define required variables in template -->
+<script>
+    var api_login = "{% url 'users:login' %}",
+        url_index ="{% url 'index' %}";
+</script>
+<!-- include your js files -->
+<script src="{% static 'js/login.js' %}"></script>
 {{ block.super }}
-<script type="text/javascript" src="{% static 'js/login.js' %}"></script>
 {% endblock %}
